Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1755

osc_cache.c:652:osc_extent_find()) ASSERTION( osc_extent_sanity_check0(ext, __func__, 652) == 0 ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.4.0
    • None
    • None
    • 3
    • 4462

      This issue was first seen at: https://maloo.whamcloud.com/test_sets/60da32e2-e712-11e1-ac43-52540035b04c

      with stacktrace of:

      02:07:19:Lustre: DEBUG MARKER: == sanity-benchmark test fsx: fsx == 02:07:17 (1345021637)
      02:08:14:LustreError: 22697:0:(osc_cache.c:255:osc_extent_sanity_check0()) extent ffff88000eb94720@

      {[217 -> 223/255], [1|0|-|cache|wiY|ffff880075652a88], [28672|7|+|-|ffff88001186c5b8|256|(null)]}

      osc_extent_find:652 sanity check ffff88000eb94720 failed with rc = 65
      02:08:14:LustreError: 22697:0:(osc_cache.c:652:osc_extent_find()) ASSERTION( osc_extent_sanity_check0(ext, _func_, 652) == 0 ) failed:
      02:08:14:LustreError: 22697:0:(osc_cache.c:652:osc_extent_find()) LBUG
      02:08:14:Pid: 22697, comm: fsx
      02:08:14:
      02:08:14:Call Trace:
      02:08:14: [<ffffffffa0b1f905>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
      02:08:14: [<ffffffffa0b1ff17>] lbug_with_loc+0x47/0xb0 [libcfs]
      02:08:14: [<ffffffffa07e4823>] osc_extent_find+0x1583/0x1e30 [osc]
      02:08:14: [<ffffffffa07d5cd1>] ? osc_enter_cache_try.clone.0+0x251/0x2e0 [osc]
      02:08:14: [<ffffffffa07e6d73>] osc_queue_async_io+0x7c3/0x1662 [osc]
      02:08:14: [<ffffffffa063e206>] ? __ptlrpc_req_finished+0x4b6/0x790 [ptlrpc]
      02:08:14: [<ffffffff81212e19>] ? security_capable+0x29/0x30
      02:08:14: [<ffffffff810787ea>] ? capable+0x2a/0x60
      02:08:14: [<ffffffffa07ccfb0>] ? osc_page_init+0x160/0x340 [osc]
      02:08:14: [<ffffffffa07cd259>] osc_page_cache_add+0xc9/0x1d0 [osc]
      02:08:14: [<ffffffffa0546267>] cl_page_cache_add+0x77/0x250 [obdclass]
      02:08:14: [<ffffffffa054a968>] ? cl_page_find_sub+0x18/0x20 [obdclass]
      02:08:15: [<ffffffffa0902e56>] ? lov_page_init_raid0+0x1a6/0x780 [lov]
      02:08:15: [<ffffffffa0902b25>] lov_page_cache_add+0x85/0x210 [lov]
      02:08:15: [<ffffffffa0546267>] cl_page_cache_add+0x77/0x250 [obdclass]
      02:08:15: [<ffffffffa05427d9>] ? cl_env_hops_keycmp+0x19/0x70 [obdclass]
      02:08:15: [<ffffffffa0b35dcd>] ? cfs_hash_bd_lookup_intent+0xdd/0x130 [libcfs]
      02:08:15: [<ffffffffa09c18dd>] vvp_io_commit_write+0x3ad/0x590 [lustre]
      02:08:15: [<ffffffffa0555e1d>] cl_io_commit_write+0xad/0x1e0 [obdclass]
      02:08:15: [<ffffffffa0996f6e>] ll_commit_write+0xee/0x360 [lustre]
      02:08:15: [<ffffffffa09ae690>] ll_write_end+0x30/0x60 [lustre]
      02:08:15: [<ffffffff81114c4a>] generic_file_buffered_write+0x18a/0x2e0
      02:08:15: [<ffffffff810724c7>] ? current_fs_time+0x27/0x30
      02:08:15: [<ffffffff81116580>] __generic_file_aio_write+0x250/0x480
      02:08:15: [<ffffffffa0542ac5>] ? cl_env_info+0x15/0x20 [obdclass]
      02:08:15: [<ffffffffa0542ac5>] ? cl_env_info+0x15/0x20 [obdclass]
      02:08:15: [<ffffffff8111681f>] generic_file_aio_write+0x6f/0xe0
      02:08:15: [<ffffffffa09c200c>] vvp_io_write_start+0x9c/0x240 [lustre]
      02:08:15: [<ffffffffa055273a>] cl_io_start+0x6a/0x140 [obdclass]
      02:08:16: [<ffffffffa0557054>] cl_io_loop+0xb4/0x1b0 [obdclass]
      02:08:16: [<ffffffffa096e93e>] ll_file_io_generic+0x42e/0x560 [lustre]
      02:08:16: [<ffffffffa096f84c>] ll_file_aio_write+0x13c/0x2c0 [lustre]
      02:08:16: [<ffffffffa096fb39>] ll_file_write+0x169/0x2a0 [lustre]
      02:08:16: [<ffffffff8117b198>] vfs_write+0xb8/0x1a0
      02:08:16: [<ffffffff810d6b12>] ? audit_syscall_entry+0x272/0x2a0
      02:08:16: [<ffffffff8117bbb1>] sys_write+0x51/0x90
      02:08:16: [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b

            jay Jinshan Xiong (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: